--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,11 +21,14 @@ jobs:
       - name: Install dependencies
         run: npm install --legacy-peer-deps
 
+      - name: Install Vite globally
+        run: npm install -g vite
+
       - name: Debug - List vite binary
-        run: ls -l ./node_modules/.bin/vite
+        run: ls -l $(which vite)
 
       - name: Build
-        run: npx vite build
+        run: vite build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
